--- a/public/css/master.css
+++ b/public/css/master.css
@@ -14,10 +14,10 @@
     box-sizing: border-box;
 }
 #Login {
+    @apply bg-red-500;
     position: absolute;
-    background: #e5e5e5;
     width: 100%;
-    height: 693px;
+    height: 100dvh;
     background-color: rgba(255, 255, 255, 1);
     overflow: hidden;
     --web-view-name: Login;
