--- a/public/css/master.css
+++ b/public/css/master.css
@@ -22,7 +22,7 @@
     position: absolute;
     width: 100%;
     height: 100dvh;
-    background-color: rgba(255, 255, 255, 1);
+    /* background-color: rgba(255, 255, 255, 1); */
     overflow: hidden;
     --web-view-name: Login;
     --web-view-id: Login;
