--- a/public/css/app.css
+++ b/public/css/app.css
@@ -470,9 +470,9 @@ video {
 .border {
   border-width: 1px;
 }
-.bg-white {
+.bg-blue-500 {
   --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+  background-color: rgb(59 130 246 / var(--tw-bg-opacity, 1));
 }
 .py-4 {
   padding-top: 1rem;
@@ -481,10 +481,12 @@ video {
 .uppercase {
   text-transform: uppercase;
 }
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
 * {
   font-family: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 .card2 {
   position: relative;
